Bug 201746 - Invalid TIFF output in Editor and Batch queue manager
Summary: Invalid TIFF output in Editor and Batch queue manager
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Bqm-Convert (other bugs)
Version First Reported In: 1.0.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-28 11:20 UTC by Michal Thoma
Modified: 2016-07-04 08:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michal Thoma 2009-07-28 11:20:05 UTC
Version:           1.0.0-b3 (using KDE 4.2.2)
OS:                Linux
Installed from:    Ubuntu Packages

The Save as TIFF in editor and also convert to TIFF in Batch queue manager creates invalid file which can't be open later with Digikam or anything else. The thumbnail is created and displayed though the view and edit of the file is not possible. The GIMP also won't open the file and so won't Adobe Photoshop CS2. The both compressed and uncompressed TIFFs are invalid.

I tried to save TIFF in Editor with 0.10.0 and there was no problem.
Comment 1 caulier.gilles 2009-07-28 11:25:05 UTC
Tiff metadata are patched by Exiv2 library after that TIFF file is created. Go to Help/Components Info dialog and look which Exiv2 version you use.

Anyway, i recommend to use Exiv2 0.18.2 with digiKam...

Gilles Caulier
Comment 2 Michal Thoma 2009-07-28 11:52:00 UTC
I have LibExiv2 0.18 and LIBTIFF 3.8.2
Comment 3 caulier.gilles 2009-07-28 11:55:21 UTC
Libtiff is fine. but updated Exiv2 to 0.18.2 and try again.

Note : digiKam and libkexiv2 need to be recompiled...

Gilles Caulier
Comment 4 Michal Thoma 2009-07-28 12:52:56 UTC
OK, I'll give it a try though will take me some time...
Comment 5 Michal Thoma 2009-07-30 00:35:27 UTC
I was thinking and I have some doubts that Exiv2 is culprit. When I edit metadata like caption of TIFF image, it's written correctly and image can be still displayed correctly...

I uploaded invalid tiff here for reference: http://michal.thoma.cz/digikam/bad-tiff.tif
Comment 6 Marcel Wiesweg 2009-08-01 15:44:19 UTC
SVN commit 1005615 by mwiesweg:

If the image does not have alpha, we must not set TIFFTAG_EXTRASAMPLES at all.
If setting UNASSOC_ALPHA, libtiff assumes the last value for a pixel is a mask.
When settings samples_per_pixel to three, there are 3-1=2 color channels left
which libtiff (and noone really) cannot handle.

BUG: 201746

 M  +3 -1      NEWS  
 M  +0 -2      libs/dimg/loaders/tiffloader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1005615
Comment 7 caulier.gilles 2009-08-17 11:24:43 UTC
SVN commit 1012254 by cgilles:

backport commit #1005615
CCBUGS: 201746


 M  +0 -2      kpwriteimage.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1012254