If the image does not have alpha, we must not set TIFFTAG_EXTRASAMPLES at all. If setting UNASSOC_ALPHA, libtiff assumes the last value for a pixel is a mask. When settings samples_per_pixel to three, there are 3-1=2 color channels left which libtiff (and noone really) cannot handle.

BUG: 201746

svn path=/trunk/extragear/graphics/digikam/; revision=1005615